Update button copy to include emoticon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="emoji-char">🐻‍</div>
     <div id="emoji-definition">Tap the button below to learn a new emoji definition.</div>
 
-    <button id="random-emoji-button" name="button">Generate Random Emoji</button>
+    <button id="random-emoji-button" name="button">Generate Random Emoticon</button>
 
     <script src="app.js" charset="utf-8"></script>
   </body>
