Update button copy to include emoticon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <div id="emoji-char">🐻‍</div>
-    <div id="emoji-definition">Tap the button below to learn a new emoji definition.</div>
+    <div id="emoji-definition">Tap the button below to learn a new emoticon definition.</div>
 
     <button id="random-emoji-button" name="button">Generate Random Emoticon</button>
 
