Add history log

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Learn Emojis - Random Emoji Definition, Meaning</title>
+    <title>Learn Emoticons - Emoticon Definitions, Meanings</title>
   </head>
   <body>
 
     <div id="emoji-char">🐻‍</div>
-    <div id="emoji-definition">Tap the button below to learn a new emoticon definition.</div>
+    <div id="emoji-definition">Tap the button below to learn a new emoticon definition</div>
 
     <button id="random-emoji-button" name="button">Generate Random Emoticon</button>
+
+    <div id="history-title">History</div>
+
+    <div id="history"></div>
 
     <script src="app.js" charset="utf-8"></script>
   </body>
