--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <div id="emoji-char">🐻‍</div>
+    <div id="emoji-char">👇</div>
     <div id="emoji-definition">Tap the button below to learn a new emoticon definition</div>
 
     <button id="random-emoji-button" name="button">Generate Random Emoticon</button>
