--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Learn Emoticons - Emoticon Definitions, Meanings</title>
   </head>
   <body>
-
-    <div id="emoji-char">👇</div>
-    <div id="emoji-definition">Tap the button below to learn a new emoticon definition</div>
-
-    <button id="random-emoji-button" name="button">Generate Random Emoticon</button>
+    <div id="emoji-container">
+      <div id="emoji-char">👇</div>
+      <div id="emoji-definition">Tap below to learn a new emoticon</div>
+    </div>
+    
+    <div id="button-container"><button id="random-emoji-button" name="button">Generate Random Emoticon</button></div>
 
     <div id="history-title">History</div>
 
